<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">wardrobe</string>
    <string name="image_of_a_w">image_of_W</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="reg">Sign Up</string>
    <string name="backlogin">Back to Login</string>
    <string name="passwordForgotten">did you forget the password?</string>
    <string name="loginButton">login</string>
    <string name="exampleMail">example@email.com</string>
    <string name="SignupButton">Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="add">new</string>
    <string name="account">account</string>
    <string name="descrizione">Descrizione</string>
    <string name="titolo">Titolo</string>
    <string name="error_retrieving_product">impossibile caricare i prodotti</string>
    <string name="error_retrieving_news" />
    <string name="error_retireving_articles" />
    <string name="login_with_gogole">login with gogole</string>
    <string name="error_unexpected">unexpected error</string>
    <string name="error_password_login">The password must have at least 8 characters</string>
    <string name="error_email_login">Check the email address</string>
    <string name="error_collision_user">This email is already registered</string>
    <string name="default_web_client_id">766436968690-vtdmk2jvgbqu7bspni9brv1itmdq3d0m.apps.googleusercontent.com</string>
    <string name="preferiti">Preferiti</string>
    <string name="product_image">immagine del prodotto</string>
    <string name="login_with_google">Login with Google</string>

</resources>