<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".LoginActivity">


  <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:contentDescription="@string/image_of_a_w"
      app:srcCompat="@drawable/ic_login" />


  <com.google.android.material.textfield.TextInputLayout
      style="?attr/textInputFilledStyle"
      android:layout_marginTop="50dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:hint="@string/email">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      style="?attr/textInputFilledStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      app:startIconContentDescription="ciao"
      app:endIconMode="password_toggle"
      android:hint="@string/password">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />
  </com.google.android.material.textfield.TextInputLayout>
  <Button
      style="@style/Widget.Material3.Button.TextButton"
      android:id="@+id/textButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/passwordForgotten"/>
  <Button
      android:id="@+id/filledButton"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/loginButton"
      />
</LinearLayout>
